--- a/research.html
+++ b/research.html
@@ -52,7 +52,7 @@
                   </li>
                   <li><a target="_blank" href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en">Google Scholar</a></li>
                    <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#members">Members</a>
+                     <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#team">Team</a>
                   </li>
                   <li class="page-scroll">
                      <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#news">News</a>
@@ -224,9 +224,7 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
       <section  name="news" id="news">
          <div class="container lead">
             <div style="text-align: left; margin-top:10px" class="col-md-12">
-               <b class="noshow" style="display:none;" id="tab-5">
-               <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-courses-content').toggle();">News  <span class="glyphicon glyphicon-chevron-down"></span></button>
-               </b>
+             
                <div class="allshow" style="display:none;" id="tab-courses-content">
                   <hr class="star-primary">
                   <h2>Lab News (2024)</h2>
@@ -275,7 +273,7 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
              </div>
          </section> -->
       
-      <section name="members" id="members">
+      <section name="team" id="team">
          <div class="container lead">
             <div style="text-align: left; margin-top:10px" class="col-md-12">
                <b class="noshow" style="display:none;" id="tab-8">
