--- a/research.html
+++ b/research.html
@@ -146,29 +146,23 @@
          <div class="container lead">
          <div style="text-align: left; margin-top:10px" class="col-md-12">
          <b class="noshow" style="display:none;" id="tab-10">
-         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-contact-content').toggle();">Contact  <span class="glyphicon glyphicon-chevron-down"></span></button>
+         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-participate-content').toggle();">Contact  <span class="glyphicon glyphicon-chevron-down"></span></button>
          </b>
-         <div class="allshow" style="display:none;" id="tab-contact-content">
+         <div class="allshow" style="display:none;" id="tab-participate-content">
             <hr class="star-primary">
-            <h2>Contact</h2>
-            <div class="container lead">
-               <div align="left" class="col-md-3">
-                  <h4>OFFICE ADDRESS</h4>
-                  Tempestt Neal<br>
-                  ENB 310 <br>
-                  Dept. of Computer Science and Engineering<br>
-                  University of South Florida<br>
-                  4202 E. Fowler Avenue<br>
-                  Tampa, FL 33620<br>
-                  </p>
-               </div>
-               <div align="left" class="col-md-3">
-                  <h4>OFFICE DIRECTIONS</h4>
-                  <p><a href="https://goo.gl/maps/uem5VX5EvJqJnEJr7" target="_blank"><img src="images/directions.png" border="0"
-                     width="150"> <br>https://goo.gl/maps/uem5VX5EvJqJnEJr7</a>
-                  </p>
+            <h2> Research Study Participants </h2>
+          <div class="container lead">
+            <div class="row">
+               <div class="col-md-3">
+                  <h4>Our laboratory frequently conducts research studies that require input from participants.</h4>
+                  <p>We are currently seeking participants for the following study:</p>
+                  <ul>
+                     <li>Smart Door Authentication System. <a href="5331.png" target="_blank">Download Recruitment Flyer</a>. Lead Researcher: Mohamed Ebraheem.</li>
+                  </ul>
                </div>
             </div>
+         </div>
+
             <hr class="star-primary">
          </div>
       </section>
