--- a/research.html
+++ b/research.html
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav navbar-right">
                   <li><a target="_blank" href="Neal_CV.pdf">CV (PDF)</a></li>
-                  <li class="page-scroll">
+<!--                   <li class="page-scroll">
                      <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="#">Research</a>
-                  </li>
+                  </li> -->
 
                    <li class="dropdown">
                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                      Research<span class="caret"></span></a>
                      <ul class="dropdown-menu">
                         <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#team">Team</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#topics">Topics</a></li>
+                        <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#topics">Research Topics</a></li>
                         <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#participate">Participate</a></li>
                         <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#pubs">Publications</a></li>
                         <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#join">Join Us</a></li>
