--- a/research.html
+++ b/research.html
@@ -150,14 +150,16 @@
          </b>
          <div class="allshow" style="display:none;" id="tab-participate-content">
             <hr class="star-primary">
-            <h2> Research Study Participants </h2>
+            <h2> Research Study Participation </h2>
           <div class="container lead">
             <div class="row">
                <div class="col-md-12">
                   <h4>Our laboratory frequently conducts research studies that require input from participants.</h4>
-                  <p>We are currently seeking participants for the following study:</p>
+                  <p>We are currently seeking participants for the following studies:</p>
                   <ul>
-                     <li><b>Smart Door Authentication System</b> (<a href="5331.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Mohamed Ebraheem.</li>
+                     <li><b>Study 005331: Smart Door Authentication System</b> (<a href="5331.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Mohamed Ebraheem</li>
+                     <li><b>Study 006481: I-CLAIM: Focus Groups: Assessing User Authentication Experiences with Historically Excluded Groups</b> (<a href="6481.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Hoorad Abootalebi</li>
+
                   </ul>
                </div>
             </div>
